# qdk-chemistry

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CT_F12_DESIGN.md  CT_F12_STATUS.md  INSTALL.md  README.md  SECURITY.md  SUPPORT.md  VERSION  asci.patch  do-config  es-metadata.yml  fock_builder_handoff.md  generalize_time_evolution_plan.md  owners.txt  pip.ini  ruff.toml  scf_optimization_handoff.md  setup_dev_env.sh  test-windows-build-clang-cmake.ps1  test-windows-build-clang-pip.ps1  test-windows-build.ps1  test_cas_rdm_serialization.h5  test_unrestricted.hamiltonian.h5  vcpkg-configuration.json  vcpkg.json  wfn-refactor-pr1-review-findings.md  wfn-refactor-pr1-symmetry-blocked-tensor.md  wfn-refactor-sbid-migration.md
.pipelines/cmake/deps-install/: CMakeLists.txt
cpp/: CMakeLists.txt  CMakePresets.json  profile_compile_memory.py  profile_memory.sh  test_cas_serialization.h5
cpp/cmake/: memory_pools.cmake  qdk-uarch.cmake  qdkConfig.cmake.in  third_party.cmake
cpp/cmake/patches/: apply-patch.cmake  blaspp-msvc-pretty-function.cmake  blaspp-msvc.patch  ecpint-msvc-vla.cmake  lapackpp-msvc-allocator.patch  libint2-msvc-sse-macros.cmake
cpp/examples/: simple_e2e.cpp
cpp/include/qdk/: chemistry.hpp
cpp/manifest/qdk-chemistry/: cgmanifest.json
cpp/tests/: CMakeLists.txt  README.md  test_abelian_mps_wavefunction.cpp  test_active_space.cpp  test_algorithm_hash.cpp  test_ansatz.cpp  test_basis_set.cpp  test_cabs.cpp  test_cholesky.cpp  test_configuration.cpp  test_coupled_cluster_calculator.cpp  test_ctf12_effective_hamiltonian.cpp  test_ctf12_f12_hf.cpp  test_element_data.cpp  test_factorized_hamiltonian.cpp  test_fock_benchmark.cpp  test_geminal_eri.cpp  test_hamiltonian.cpp  test_lattice_graph.cpp  test_localization.cpp  test_logger.cpp  test_logger_startup.cpp  test_macis.cpp  test_macis_dispatch.cpp  test_majorana_mapping.cpp  test_mc.cpp  test_mcscf.cpp  test_microsoft_utils.cpp  test_model_hamiltonians.cpp  test_model_orbitals.cpp  test_mp2.cpp  test_mps_wavefunction.cpp  test_nuclear_derivative.cpp  test_optri_basis.cpp  test_orbitals_comprehensive.cpp  test_orbitals_edge_cases.cpp  test_pauli_operator.cpp  test_population_analysis.cpp  test_rdms.cpp  test_s_squared.cpp  (+18 more)
cpp/tests/algorithms/: test_macis.cpp  test_mcscf.cpp
cpp/tests/cmake/: test_memory_pools.py
cpp/tests/data/: test_basis_set_ao_symmetries.cpp  test_orbital_containers.cpp  test_orbitals.cpp  test_orbitals_sbt.cpp  test_structure.cpp  test_wfn_multi_det.cpp
cpp/tests/symmetry/: test_symmetry_blocked_index_set.cpp  test_symmetry_blocked_scalar.cpp  test_symmetry_blocked_sparse_map.cpp  test_symmetry_blocked_tensor.cpp  test_symmetry_vocab.cpp
cpp/tests/utils/: test_logger.cpp
docs/examples/cpp/: CMakeLists.txt  basis_set.cpp  design_principles.cpp  factory_pattern.cpp  hamiltonian.cpp  hamiltonian_constructor.cpp  interfaces.cpp  localizer.cpp  orbitals.cpp  scf_solver.cpp  serialization.cpp  settings.cpp  structure.cpp
python/: CMakeLists.txt  _dev_version.py  cc_wf.hdf5  pyproject.toml
python/examples/: __init__.py  e2e_mol_to_quantum_energy.ipynb  pennylane_qpe.py  qiskit_qpe_direct.py  sample_e2e_qpe_trotter.py  sample_non_commuting_qpe.py  sample_sci_workflow.py
python/manifest/: cgmanifest.json
python/src/pybind11/: constants.cpp  module.cpp  qdk_scf_config.cpp
python/src/qdk/: __init__.py
python/src/qdk_chemistry/: __init__.py  constants.py  definitions.py
python/tests/: README.md  __init__.py  conftest.py  mps_test_utils.py  qubit_hamiltonian_with_test.py  reference_tolerances.py  test_active_space.py  test_algorithms.py  test_algorithms_registry.py  test_ansatz.py  test_basis_set.py  test_block_encoding.py  test_block_encoding_lcu.py  test_block_encoding_sossa.py  test_cache.py  test_circuit.py  test_circuit_3_qir.ll  test_circuit_executor_data.py  test_circuit_executor_qdk.py  test_circuit_mapper.py  test_conditional_alias_sampling.py  test_configuration_set.py  test_constants_binding.py  test_constants_documentation.py  test_controlled_circuit_mapper.py  test_controlled_circuit_mapper_prep_sel_prep.py  test_controlled_circuit_mapper_prepare_select.py  test_controlled_circuit_mapper_select.py  test_controlled_circuit_mapper_sossa.py  test_controlled_psp_mapper.py  test_controlled_swap_circuit_mapper.py  test_controlled_time_evolution.py  test_controlled_unitary.py  test_coupled_cluster.py  test_ct_f12_hamiltonian.py  test_ct_f12_scf_solver.py  test_data_class.py  test_davidson_solver.py  test_deprecated_aliases.py  test_deprecations.py  (+164 more)
python/tests/algorithms/: test_algorithms.py  test_algorithms_registry.py  test_davidson_solver.py  test_energy_estimator.py  test_mc.py  test_mcscf.py  test_model_hamiltonians.py  test_mp2.py  test_phase_estimation_iterative.py  test_pmc.py  test_qpe_result.py  test_qubit_hamiltonian_solver.py  test_scf.py  test_stability.py  test_state_preparation.py  test_syev_solver.py
python/tests/data/: test_ansatz.py  test_ansatz_property_bindings.py  test_basis_set.py  test_configuration_set.py  test_data_class.py  test_element_data.py  test_encoding_metadata.py  test_energy_expectation_result.py  test_estimator_data.py  test_hamiltonian.py  test_noise_models.py  test_orbitals.py  test_qubit_hamiltonian.py  test_structure.py  test_symmetries.py  test_wavefunction.py
python/tests/integrations/: pyscf_helpers.py  test_openfermion_mapper.py  test_pyscf_basis_conversion.py  test_pyscf_correlation.py  test_pyscf_localization.py  test_pyscf_scf.py  test_qiskit_executor.py  test_qiskit_qpe.py  test_qiskit_qubit_mapper.py  test_qiskit_state_prep.py
python/tests/qubit_mapping/: test_qdk_qubit_mapper.py  test_qiskit_conversion.py
python/tests/test_data/: ethylene_4e4o_2det.hamiltonian.json  f2_10e6o.hamiltonian.json  make_ethylene.py  make_f2.py  o2.structure.xyz  ozone_sparse_ci_wavefunction.wavefunction.h5  ozone_sparse_ci_wavefunction.wavefunction.json  test_circuit_qir.ll  test_qir_sequential_record.ll
python/tests/time_evolution/: test_circuit_mapper.py  (+4 more)
temp-release/: CMakeLists.txt  pyproject.toml
(+2157 files in other folders)
