[build-system]
build-backend = "scikit_build_core.build"
requires = [
  "scikit-build-core>=0.10.0",
  "pybind11>=2.13.6",
  "numpy>=2.0.0,<2.4.0",
]


[project]
authors = [
  {name = "QDK/Chemistry Development Team", email = "qdk-chemistry@microsoft.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Quantum Computing",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Education",
]
dependencies = [
  "numpy>=2.0.0,<2.4.0",
  "scipy>=1.7.0",
  "matplotlib>=3.10.0",
  "ruamel-yaml>=0.18.10",
  "qdk[jupyter]>=1.27.0",
  "pybind11-stubgen>=2.5.1",
  "h5py>=3.0.0"
]
description = "Quantum Development Kit - Chemistry Library"
license = { file = "LICENSE.txt" }
dynamic = ["version"]
name = "qdk-chemistry"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
all = [
  "qdk-chemistry[coverage,dev,docs,jupyter,plugins,qiskit-extras,openfermion-extras]"
]
coverage = [
  "coverage",
  "pytest",
  "pytest-cov",
  "gcovr"
]
dev = [
  "coverage",
  "mypy",
  "nbclient",
  "nbformat",
  "pytest",
  "pytest-env",
  "ruff"
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser",
  "breathe",
  "sphinx-autodoc-typehints",
  "sphinx-inline-tabs",
  "sphinxcontrib-napoleon",
  "sphinxcontrib-bibtex",
  "sphinx_copybutton"
]
jupyter = [
  "ipykernel>=6.0",
  "pandas>=2.0.0",
  "qdk-chemistry[plugins]",
]
plugins = [
  "pyscf>=2.9.0,<2.12.1"
]
qiskit-extras = [
  "qiskit[qasm3-import]>=2.2.0",
  "qiskit-aer",
  "qiskit-nature",
  "pylatexenc==2.10"
]
openfermion-extras = [
  "openfermion>=1.0.0"
]

[project.urls]
Documentation = "https://microsoft.github.io/qdk-chemistry"
Homepage = "https://github.com/microsoft/qdk-chemistry"
Issues = "https://github.com/microsoft/qdk-chemistry/issues"
Repository = "https://github.com/microsoft/qdk-chemistry"
Source = "https://github.com/microsoft/qdk-chemistry"
Changelog = "https://github.com/microsoft/qdk-chemistry/releases"

# Configuration for C++ coverage reporting
[tool.coverage.cpp]
# Exclude patterns for C++ coverage
exclude = [
  "*/tests/*",
  "*/external/*",
  "*/third_party/*"
]
# Output format for C++ coverage reports
output_format = ["html", "xml"]

[tool.coverage.paths]
source = [
  "src/",
  "*/site-packages/"
]

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
  "def __repr__",
  "def __str__",
  "raise NotImplemented",
  "if 0:",
  "raise RuntimeError",
  "raise AssertionError",
  "raise NotImplementedError"
]
ignore_errors = true

[tool.coverage.run]
data_file = ".coverage"
omit = [
  "*/tests/*",
  "*/test_*"
]
parallel = false
source = ["src"]

[tool.mypy]
exclude = ["tests"]
warn_redundant_casts = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "numpy",
  "matplotlib"
]

[tool.pytest.ini_options]
addopts = [
  "-ra ",  # show extra summary info for skipped, failed, and xfailed tests
  "-v"  # verbose output
]
filterwarnings = [
  "ignore::DeprecationWarning:qiskit",
  "ignore::DeprecationWarning:qiskit_aer",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
env = [
  "QSHARP_PYTHON_TELEMETRY=false"
]

[tool.ruff]
line-length = 120
# Vendored and infrastructure directories — not part of the Python package.
# These are excluded because --config in pre-commit applies this config to all
# files (not just python/), and these dirs were never under the full rule set.
exclude = ["external", ".github", ".pipelines"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
ignore = [
  "D203",     # Incompatible with D211 `no-blank-line-before-class`
  "D213",     # Incompatible with D212 `multi-line-summary-second-line`
  "D401",     # non-imperative-mood
  "PLR0912",  # too-many-branches
  "PLR0913",  # too-many-arguments
  "PLR0915",  # too-many-statements
  "PLR2004",  # magic-value-comparison
  "INP001",   # Allow __init__.py files without PEP 420 compliance
]
select = [
  "ARG",  # flake8-unused-argument
  "TC",   # flake8-type-checking
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "INP",  # flake8-no-pep420
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "BLE",  # flake8-blind-except
  "I",    # isort
  "NPY",  # numpy-rules
  "N",    # pep8-naming
  "E",    # pycodecstyle-error
  "W",    # pycodecstyle-warning
  "D",    # pydocstyle
  "F",    # pyflakes
  "PL",   # pylint
  "RUF",  # ruff
  "UP",
  "C4",
  "DTZ",
  "T10",
  "PIE",
  "PT",
  "ERA",
]

[tool.ruff.lint.per-file-ignores]
# Sphinx conf.py and doc helper scripts
"**/docs/*" = [
  "A001",    # Variable `copyright` shadows a builtin
  "ARG001",  # Unused function argument
  "D100",    # Missing module docstring
  "D103",    # Missing function docstring
  "E501",    # Line too long (Sphinx config has long URLs)
  "INP001",  # Not a package
  "PLC0415", # import not at top level (lazy imports in Sphinx hooks)
  "RET504",  # Unnecessary assignment before return
]
# Documentation examples are literate scripts: imports are interleaved with
# explanatory code, names may be re-defined across sections, and the code is
# meant to be read, not maintained as production source.
"**/docs/source/_static/examples/**/*.py" = [
  "ARG002",  # Unused method argument (stub implementations)
  "B007",    # Loop control variable not used (demo loops)
  "B018",    # Useless expression (demonstrating attribute access)
  "B904",    # raise … from (pedagogical, not production)
  "D101",    # Missing class docstring
  "D102",    # Missing method docstring
  "D103",    # Missing function docstring
  "D107",    # Missing __init__ docstring
  "E402",    # Module-level import not at top of file
  "ERA001",  # Commented-out code (showing alternatives)
  "F811",    # Redefinition of unused name from line N
  "F821",    # Undefined name (cross-section references)
  "RET504",  # Unnecessary assignment before return (clearer pedagogically)
  "RUF003",  # Ambiguous unicode in comment
  "SIM118",  # Use `key in dict` (verbose form is clearer in examples)
  "TC002",   # Move import into type-checking block
]
"**/examples/*.py" = [
  "ARG002",
  "B007",
  "B018",
  "B904",
  "D101",
  "D102",
  "D103",
  "D107",
  "E402",
  "ERA001",
  "F811",
  "F821",
  "RET504",
  "RUF003",
  "SIM118",
  "TC002",
]
"**/examples/**/*.py" = [
  "ARG002",
  "B007",
  "B018",
  "B904",
  "D101",
  "D102",
  "D103",
  "D107",
  "E402",
  "ERA001",
  "F811",
  "F821",
  "RET504",
  "RUF003",
  "SIM118",
  "TC002",
]
"**/tests/*" = [
  "D101",    # undocumented-public-class
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "D107",    # Missing docstring in `__init__`
  "SLF001",  # Private member accessed
]
"**/tests/test_data/*.py" = [
  "INP001",  # Standalone scripts to create test data, not part of a package
]
"__init__.py" = [
  "F401",  # imported but unused; consider removing
]

# Scikit-build-core configuration
[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"
# Build in current directory (python/)
cmake.source-dir = "."
# Enable verbose output for debugging
cmake.verbose = true
install.components = ["_core", "qdk_chemistry_resources"]
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "../VERSION"
metadata.version.regex = "^(?P<value>\\S+)$"

[tool.scikit-build.wheel]
packages = ["src/qdk_chemistry"]
install-dir = "qdk_chemistry"

[tool.scikit-build.cmake.define]
BUILD_SHARED_LIBS = "OFF"
QDK_CHEMISTRY_ENABLE_COVERAGE = {env="QDK_CHEMISTRY_ENABLE_COVERAGE", default="OFF"}
QDK_UARCH = {env="QDK_UARCH", default="native"}
QDK_ENABLE_OPENMP = {env="QDK_ENABLE_OPENMP"}
CMAKE_BUILD_PARALLEL_LEVEL = {env="CMAKE_BUILD_PARALLEL_LEVEL", default="4"}

[[tool.scikit-build.overrides]]
if.env.CMAKE_BUILD_TYPE = "Debug"
cmake.build-type = "Debug"

[[tool.scikit-build.overrides]]
if.env.CMAKE_BUILD_TYPE = "RelWithDebInfo"
cmake.build-type = "RelWithDebInfo"

[[tool.scikit-build.overrides]]
if.from-sdist = true
inherit.metadata.version = "append"
metadata.version.input = "VERSION"

[[tool.scikit-build.generate]]
path = "VERSION"
template = "${version}"
location = "source"
