[build-system]
build-backend = "scikit_build_core.build"

requires = [
  "scikit-build-core>=0.10.0",
  "pybind11>=2.13.6",
]

[project]
authors = [
  {name = "QDK/Chemistry Development Team", email = "qdk-chemistry@microsoft.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Quantum Computing",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Education",
]
version = "0.0.1"
description = "Quantum Development Kit - Chemistry Library"
name = "qdk-chemistry"
requires-python = ">=3.11"

# Scikit-build-core configuration (minimal)
[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"
cmake.source-dir = "."

[tool.scikit-build.wheel]
packages = ["src/qdk_chemistry"]
install-dir = "qdk_chemistry"
